--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,6 +5,7 @@ title: 4D Perception Lab
 module:
   imports:
   - path: github.com/imfing/hextra
+  - path: github.com/hugomods/icons/vendors/font-awesome
 
 markup:
   # allow raw html
@@ -18,15 +19,12 @@ markup:
 
 menu:
   main:
-    - name: About
+    - name: Home
       pageRef: /
       weight: 1
     - name: Research
-      pageRef: /research/
+      pageRef: /research
       weight: 2
-    - name: Publications
-      pageRef: /publications/articles
-      weight: 3
     - name: People
       pageRef: /people
       weight: 4
