--- a/hugo.yaml
+++ b/hugo.yaml
@@ -69,8 +69,10 @@ params:
     displayTitle: true
     displayLogo: true
     logo:
-      path: images/logo light 128x128.png 
-      dark: images/logo dark 128x128.png
+      # path: images/logo light 128x128.png 
+      # dark: images/logo dark 128x128.png
+      path: favicon.svg
+      dark: favicon.svg
       link: /
       width: 40
       height: 40
